<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gondar"
    tools:context="com.joshbgold.mappy.MainActivity">

    <Spinner
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:id="@+id/dropdownEditText"
        android:background="@drawable/buttons"
        android:text="Choose a location or enter custom location"
        android:alpha="0.50"
        android:textAllCaps="false"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:gravity="left"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="20dp"
        android:layout_marginTop="45dp"/>

    <ImageButton
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:src="@mipmap/pencil"
        android:alpha="0.50"
        android:id="@+id/editLocations"
        android:padding="10dp"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@+id/dropdownEditText"
        android:layout_marginTop="45dp" />

 <RadioGroup
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:layout_below="@+id/dropdownEditText"
     android:id="@+id/NavigationChoices"
     android:layout_centerHorizontal="true">



    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoogleBicycle"
        android:id="@+id/googBicycleButton"
        android:checked="false"
        android:background="@drawable/buttons"
        android:alpha="0.50"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_maps_directions_bike"
        android:drawableRight="@drawable/ic_maps_directions_bike"
        android:textSize="12sp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoogleDriving"
        android:id="@+id/googDrivingButton"
        android:checked="false"
        android:background="@drawable/buttons"
        android:alpha="0.50"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_maps_directions_car"
        android:drawableRight="@drawable/ic_maps_directions_car"
        android:textSize="12sp"/>

     <RadioButton
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/GoogleTransit"
         android:id="@+id/googTransitButton"
         android:checked="true"
         android:background="@drawable/buttons"
         android:alpha="0.50"
         android:textAllCaps="false"
         android:layout_marginTop="15dp"
         android:padding="10dp"
         android:textColor="@android:color/black"
         android:drawableEnd="@drawable/ic_maps_directions_bus"
         android:drawableRight="@drawable/ic_maps_directions_bus"
         android:textSize="12sp"/>

    <RadioButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/GoogleWalking"
        android:id="@+id/googWalkButton"
        android:checked="false"
        android:background="@drawable/buttons"
        android:alpha="0.50"
        android:textAllCaps="false"
        android:layout_marginTop="15dp"
        android:padding="10dp"
        android:textColor="@android:color/black"
        android:drawableEnd="@drawable/ic_maps_directions_walk"
        android:drawableRight="@drawable/ic_maps_directions_walk"
        android:textSize="12sp"/>
 </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launchMap"
        android:id="@+id/launchMapButton"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/buttons"
        android:alpha="0.50"
        android:textAllCaps="false"
        android:layout_marginBottom="15dp"
        android:padding="10dp"
        android:textSize="18sp"/>

</RelativeLayout>
